# chaeboxi

./: .eslintignore  .eslintrc.js  .gitignore  AGENTS.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.renderer.config.ts  vitest.config.ts
docs/: rag.md  storage.md  svelte-migration-plan.md  testing.md
scripts/: delete-source-maps.cjs  postinstall.cjs
scripts/history-sync-server/: Dockerfile  README.md  docker-compose.yml  package.json  server.mjs  setup-openrc.sh  setup-systemd.sh
src-svelte/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src-svelte/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
src-svelte/.svelte-kit/types/: route_meta_data.json
src-svelte/src/: app.css  app.d.ts  app.html
src-svelte/src/routes/: +layout.svelte  +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json  tauri.svelte.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: Sidebar.tsx  index.html  index.tsx  preload.d.ts  variables.ts
src/renderer/components/: ImageModelSelect.tsx
src/renderer/hooks/: useProviders.ts
src/renderer/i18n/: for-key-scan.ts  parser.ts
src/renderer/lib/: utils.ts
src/renderer/modals/: FileParseError.tsx  SessionSettings.tsx  Settings.tsx  Welcome.tsx
src/renderer/platform/: desktop_platform.ts  index.ts  storages.ts  tauri_ipc_adapter.ts
src/renderer/routes/: __root.tsx  about.tsx  index.tsx
src/renderer/setup/: global_error_handler.ts  (+1 more)
src/shared/: defaults.ts  desktop-ipc-types.ts
(+422 files in other folders)
